High Scores - Java - Fixed an error in latest() function